@@ -4,7 +4,8 @@ zeit.content.article changes
 3.4.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add DAV-Property ``is_breaking`` to mark articles that were created as
+  breaking news (so the frontend can do different things to them).
 
 
 3.4.7 (2014-07-02)
